--- a/FdF/makefile
+++ b/FdF/makefile
@@ -6,53 +6,46 @@
 #    By: qbanet <qbanet@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 13:26:13 by qbanet            #+#    #+#              #
-#    Updated: 2023/04/17 13:45:05 by qbanet           ###   ########.fr        #
+#    Updated: 2023/04/24 11:28:53 by qbanet           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = fdf
-
+# Compilateur
 CC = gcc
+
+# Options de compilation
 CFLAGS = -Wall -Wextra -Werror
+IFLAGS = -Iincludes -Ilibft/includes -Iminilibx-linux
+LFLAGS = -Llibft -lft -Lminilibx-linux -lmlx -lXext -lX11 -lm
 
+# Fichiers source et objet
 SRCS = src/fdf.c src/utile.c
+OBJS = $(SRCS:.c=.o)
 
-LIBFT = libft/libft.a
-LIBFT_DIR = libft
-LIBFT_FLAGS = -L$(LIBFT_DIR) -lft
+# Règles de compilation
+all: libft/libft.a minilibx-linux/libmlx.a fdf
 
-INCLUDES = -Iincludes -I$(LIBFT_DIR)/includes
+libft/libft.a:
+	cd libft && make
 
-OBJS_DIR = objs
-OBJS = $(SRCS:%.c=$(OBJS_DIR)/%.o)
+minilibx-linux/libmlx.a:
+	cd minilibx-linux && make
 
-GREEN = \033[0;32m
-YELLOW = \033[0;33m
-RESET = \033[0m
+fdf: $(OBJS)
+	$(CC) $(CFLAGS) $(IFLAGS) $(LFLAGS) $(OBJS) -o fdf
 
-all: $(LIBFT) $(NAME)
-
-$(NAME): $(OBJS)
-	@echo "$(YELLOW)⏳ Linking FdF...$(RESET)"
-	@$(CC) $(CFLAGS) $(OBJS) $(LIBFT_FLAGS) -o $(NAME)
-	@echo "$(GREEN)✅ FdF created!$(RESET)"
-
-$(OBJS_DIR)/%.o: %.c
-	@mkdir -p $(dir $@)
-	@$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
-
-$(LIBFT):
-	$(MAKE) -C $(LIBFT_DIR)
+%.o: %.c
+	$(CC) $(CFLAGS) $(IFLAGS) -c $< -o $@
 
 clean:
-	@$(MAKE) -C $(LIBFT_DIR) clean
-	@rm -rf $(OBJS_DIR)
-	@echo "$(GREEN)🪠 Object files cleaned!$(RESET)"
+	cd libft && make clean
+	cd minilibx-linux && make clean
+	rm -f $(OBJS)
 
 fclean: clean
-	@$(MAKE) -C $(LIBFT_DIR) fclean
-	@rm -f $(NAME)
-	@echo "$(GREEN)🪠 Client and Server executables cleaned!$(RESET)"
+	cd libft && make fclean
+	rm -f minilibx-linux/libmlx.a
+	rm -f fdf
 
 re: fclean all
 
