--- a/FdF/Makefile
+++ b/FdF/Makefile
@@ -6,7 +6,7 @@
 #    By: qbanet <qbanet@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 13:26:13 by qbanet            #+#    #+#              #
-#    Updated: 2023/04/25 15:28:46 by qbanet           ###   ########.fr        #
+#    Updated: 2023/05/22 15:08:32 by qbanet           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,10 +21,10 @@ MINILIBX_DIR = minilibx-linux
 MINILIBX = $(MINILIBX_DIR)/libmlx.a
 MINILIBX_LINK = -L$(MINILIBX_DIR) -lmlx -lXext -lX11
 
-INCLUDES = -Iincludes -I$(LIBFT_DIR)/includes -I$(MINILIBX_DIR)
+INCLUDES = -I includes -I $(LIBFT_DIR)/includes -I $(MINILIBX_DIR)
 
 SRC_DIR = src
-SRC_FILES = fdf.c window.c key.c init.c utile.c file.c
+SRC_FILES = fdf.c window.c key.c init.c utile.c file.c error.c
 SRC = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 OBJ_DIR = obj
