--- a/FdF/libft/Makefile
+++ b/FdF/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: qbanet <qbanet@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/02 12:04:16 by qbanet            #+#    #+#              #
-#    Updated: 2023/06/20 09:33:24 by qbanet           ###   ########.fr        #
+#    Updated: 2023/06/23 16:33:44 by qbanet           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,7 +37,7 @@ SRCS = 	ft_atoi.c ft_itoa.c ft_memcmp.c ft_putnbr_fd.c ft_strncmp.c\
 		ft_strlcat.c get_next_line.c ft_isascii.c ft_lstsize.c\
 		ft_printf_utils_unsign.c ft_strlcpy.c get_next_line_utils.c\
 		ft_isdigit.c ft_max.c ft_putchar_fd.c ft_strlen.c ft_isprint.c\
-		ft_memchr.c ft_putendl_fd.c ft_strmapi.c ft_gnl_u.c\
+		ft_memchr.c ft_putendl_fd.c ft_strmapi.c ft_gnl_u.c ft_free_tab.c\
 
 SRC = $(addprefix $(SRC_DIR)/,$(SRCS))
 OBJ = $(addprefix $(OBJ_DIR)/,$(SRCS:.c=.o))
