--- a/Fdf_2/Makefile
+++ b/Fdf_2/Makefile
@@ -6,7 +6,7 @@
 #    By: qbanet <qbanet@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 13:26:13 by qbanet            #+#    #+#              #
-#    Updated: 2023/07/31 16:06:23 by qbanet           ###   ########.fr        #
+#    Updated: 2023/08/03 13:30:32 by qbanet           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,11 @@ INCLUDES = -I includes -I $(LIBFT_DIR)/includes -I $(MINILIBX_DIR)
 SRC_DIR = src
 SRC_FILES = main.c\
 			map_crea.c\
-			utile.c
+			utile.c\
+			init.c\
+			key.c\
+			key_move.c\
+			draw.c
 SRC = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 OBJ_DIR = obj
