--- a/Fdf_2/Makefile
+++ b/Fdf_2/Makefile
@@ -6,7 +6,7 @@
 #    By: qbanet <qbanet@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 13:26:13 by qbanet            #+#    #+#              #
-#    Updated: 2023/08/03 13:30:32 by qbanet           ###   ########.fr        #
+#    Updated: 2023/08/07 14:28:32 by qbanet           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,8 @@ SRC_FILES = main.c\
 			init.c\
 			key.c\
 			key_move.c\
-			draw.c
+			draw.c\
+			point.c
 SRC = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 OBJ_DIR = obj
